# connect4_qt

./: .gitignore  CMakeLists.txt  GameBoard.cpp  GameBoard.h  GameConfig.cpp  GameConfig.h  Info.plist.in  MainWindow.cpp  MainWindow.h  README.md  SettingsDialog.cpp  SettingsDialog.h  WinDialog.cpp  WinDialog.h  gameboard.cpp  gameboard.h  main.cpp  mainwindow.cpp  mainwindow.h  menu.cpp  menu.h
.qt/: QtDeploySupport.cmake
